# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import clientsRouter from "./clients";
 import aiSearchRouter from "./ai-search";
+import vkSearchRouter from "./vk-search";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(clientsRouter);
 router.use(aiSearchRouter);
+router.use(vkSearchRouter);
 
 export default router;
